k8s/categories-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categories
  template:
    metadata:
      labels:
        app: categories
    spec:
      containers:
        - name: go-categories-service
          image: "adwera/go-categories-service"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        
---
apiVersion: v1
kind: Service
metadata:
  name: categories-service
spec:
  selector:
    app: categories
  ports:
    - name: main-port
      protocol: TCP
      port: 5000
      targetPort: 5000
