k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: go-products-service
          image: "adwera/go-products-service"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  ports:
    - name: web-port
      protocol: TCP
      port: 5001
      targetPort: 5001
    - name: grpc-port
      protocol: TCP
      port: 8000
      targetPort: 8000
